[package]
name = "img_combinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25" }

[profile.release]
lto = "fat"
codegen-units = 1
strips = "symbols"
debug = false
overflow-checks = true
opt-level = 3